feat: nft controller integrate with nft service for getNfts and createNft
